--- a/Markup/Lesson 1 homework/css/style.css
+++ b/Markup/Lesson 1 homework/css/style.css
@@ -1,13 +1,15 @@
-.main {
-	width: 1000px;
-	background-color: gray;
-	padding: 5px 0px;
-}
 .profile {
-	background-color: white;
+	background-color: #FFFFFF;
 	width: 500px;
-	margin-left: 250px;
+	margin: auto;
+}
+img {
+	margin-left: 100px;
+	width: 300px;
 }
 p {
 	margin-left: 10px;
+}
+h1,h3 {
+	text-align: center;
 }
